Fixed wrong background color for structural links

--- a/assets/css/app/helpers.css
+++ b/assets/css/app/helpers.css
@@ -67,7 +67,6 @@ ul.structural_link {
     padding-bottom: 7px;
     padding-left: 0;
     list-style: none;
-    background-color: inherit;
 }
 
 /* Display list items side by side */
